United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6791852 assert(b->_nodes[insidx] == n,"got insidx set incorrectly")
6791852 : assert(b->_nodes[insidx] == n,"got insidx set incorrectly")

Details
Type:
Bug
Submit Date:
2009-01-09
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
solaris_10
Sub-Component:
compiler
CPU:
sparc
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs15
Fixed Versions:
hs15

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
java -cp /export/kvn/jdk7/lib/tools.jar:/java/sqe/comp/vm/testbase/sqe/vm/6/build/latest/vm/bin/classes:/java/sqe/comp/vm/testbase/sqe/vm/6/build/latest/share/lib/serp/serp.jar -Xcomp -XX:CICompilerCount=1 -Xbatch -XX:-PrintVMOptions -XX:CompileThreshold=100 -XX:+DoEscapeAnalysis -Dsun.jvm.hotspot.runtime.VM.disableVersionCheck=1 nsk.jdi.VMMismatchException.VMMismatchException001.VMMismatchException001 -verbose -arch=solaris-i586 -waittime=5 -debugee.vmkind=java -transport.address=dynamic "-debugee.vmkeys=-server -Xcomp -XX:-PrintVMOptions -XX:CompileThreshold=100 -XX:+DoEscapeAnalysis \
-cp /export/kvn/jdk7/lib/tools.jar:/java/sqe/comp/vm/testbase/sqe/vm/6/build/latest/vm/bin/classes:/java/sqe/comp/vm/testbase/sqe/vm/6/build/latest/share/lib/serp/serp.jar"

 # To suppress the following error report, specify this argument
 # after -XX: or in .hotspotrc:  SuppressErrorAt=/reg_split.cpp:785
 #
 # A fatal error has been detected by the Java Runtime Environment:
 #
 #  Internal Error (/tmp/jprt/P1/B/201914.kvn/source/src/share/vm/opto/reg_split.cpp:785), pid=6381, tid=9
 #  Error: assert(b->_nodes[insidx] == n,"got insidx set incorrectly")
 #
 # JRE version: 7.0-b42
 # Java VM: OpenJDK Server VM (15.0-b01-2009-01-07-201914.kvn.6561159-fastdebug compiled mode solaris-x86 )

                                    

Comments
EVALUATION

The fix has been verified as part of hs15-b02 pit.
                                     
2009-02-24
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/91263420e1c6
                                     
2009-02-07
PUBLIC COMMENTS

Problem:
The code in PhaseChaitin::Split() in the part "Handle Crossing HRP Boundry"
expects that new spillCopy nodes are inserted before the current node.
After 6782232 fix it is not true if the current node is CreateEx.

Solution:
Remove the original fix for 6782232.
Move the CreateEx up before each round of IFG construction to produce
correct interferences.
Fix PhaseCFG::verify() and PhaseChaitin::verify_base_ptrs() methods.
                                     
2009-02-07
EVALUATION

Regression after fix for 6782232: assert("CreateEx must be first instruction in block" ).
The code in PhaseChaitin::Split() in the part *** Handle Crossing HRP Boundry ***
expects that new spillCopy nodes are inserted before the current node.
After 6782232 fix it is not true if the current node is CreateEx.
                                     
2009-01-09



Hardware and Software, Engineered to Work Together