6791852: assert(b->_nodes[insidx] == n,"got insidx set incorrectly")

Move the CreateEx up before each round of IFG construction

Reviewed-by: never, phh